[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/minigames/PolyphonyAudioManager.gd" type="Script" id=1]
[ext_resource path="res://audio/lyre/harp-low-c.wav" type="AudioStream" id=2]
[ext_resource path="res://audio/lyre/harp-d.wav" type="AudioStream" id=3]
[ext_resource path="res://audio/lyre/harp-e.wav" type="AudioStream" id=4]
[ext_resource path="res://audio/lyre/harp-f.wav" type="AudioStream" id=5]
[ext_resource path="res://audio/lyre/harp-g.wav" type="AudioStream" id=6]
[ext_resource path="res://audio/lyre/harp-a.wav" type="AudioStream" id=7]
[ext_resource path="res://audio/lyre/harp-b.wav" type="AudioStream" id=8]
[ext_resource path="res://audio/lyre/harp-high-c.wav" type="AudioStream" id=9]

[node name="PolyphonyAudioManager" type="Node2D"]
script = ExtResource( 1 )

[node name="LowCAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -25.0
pitch_scale = 2.0
bus = "Lyre"

[node name="DAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -25.0
pitch_scale = 2.0
bus = "Lyre"

[node name="EAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -25.0
pitch_scale = 2.0
bus = "Lyre"

[node name="FAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -25.0
pitch_scale = 2.0
bus = "Lyre"

[node name="GAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -25.0
pitch_scale = 2.0
bus = "Lyre"

[node name="AAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -25.0
pitch_scale = 2.0
bus = "Lyre"

[node name="BAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -25.0
pitch_scale = 2.0
bus = "Lyre"

[node name="HighCAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -25.0
pitch_scale = 2.0
bus = "Lyre"
